Fix for jumping slideshow when using css-transition.

--- a/dr-widget-carousel.less
+++ b/dr-widget-carousel.less
@@ -13,10 +13,10 @@
     }
 
     .carousel-content-wrapper {
-        transition: 0.3s all ease-in-out;
-        -moz-transition: 0.3s all ease-in-out;
-        -webkit-transition: 0.3s all ease-in-out;
-        -o-transition: 0.3s all ease-in-out;
+        -moz-transition: 0.3s margin-left ease-in-out;
+        -webkit-transition: 0.3s margin-left ease-in-out;
+        -o-transition: 0.3s margin-left ease-in-out;
+        transition: 0.3s margin-left ease-in-out;
     }
 
 	.button {
